--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@ spring.application.name=demoImage
 
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/imagedb
+spring.datasource.url=jdbc:mysql://root:TNcLDeigekEudcfEEhvPUIBxTrPRZUmv@junction.proxy.rlwy.net:33684/railway
 
 
 spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=TNcLDeigekEudcfEEhvPUIBxTrPRZUmv
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
